Fixed broken tests from logic deletes and refactoring. Added new tests for deletes